--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "mint-ui": "^2.2.13",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-analytics": "^5.17.0",
+    "vue-router": "^3.0.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
